tests/init_state/partial_init/hll_partial_init_use.err.expected
error: at 17:17: [INIT-UseAfterMove] In function 'read_moved_field': variable 'p' is used after move
    |
 17 |   let re_read = p.b;
    |                 ^^^
error: at 23:13: [INIT-UsePartiallyInit] In function 'read_whole_while_partial': variable 'p' is not fully initialized here
    |
 23 |   let all = p;
    |             ^
error: at 29:15: [INIT-UsePartiallyInit] In function 'nested_read_partial_inner': variable 'o' is not fully initialized here
    |
 29 |   let inner = o.p;
    |               ^^^
